 - Added API for getting highest supported IServerPluginCallbacks interface
   version.
 - Added API for detecting the engine version.
 - Added API for getting the VSP-simulation interface upon late loading.
 - Added OnUnlinkConCommandBase to IMetamodListner to notify when Metamod:Source
   is about to remove a concommand or convar.
 - The output of the "meta list" command has been reformatted in order to allow
   more space for plugins' name, version, and author fields.

2007/06/26 1.4.2:
 - Fixed a bug where unloading all plugins could crash if one plugin had child
   plugins.

2007/05/16 1.4.1:
 - The client version of the "meta" command should now work with games using the
   latest Source beta (srcds0407).
 - Fixed amb233 (VSP listener didn't work with Steam dedicated version).
 - Fixed amb277 (failed to get user message list in Kreedz Climbing).

2007/04/05 1.4.0:
 - Added API functions for retrieving User Message info without potentially
   crashing.
 - Added API functions for letting SourceMM plugins use Valve Server Plugin
   callbacks.
 - Added plugin status to client version of "meta list" command.  Previously, it
   did not differentiate between running and paused plugins.
 - An experimental automatic gameinfo.txt fixer is now available.
 - Changed version numbering to include the build number (SVN revision).
 - Fixed amb93 (improved mod path detection).
 - Fixed various rare string inconsistencies.

2006/11/29 1.3d:
 - Updated Metamod:Source to recognize the latest Source Engine version
   (ServerGameDLL006)

2006/09/06 1.3a:
 - Fixed a building issue on Linux which caused unresolved symbol errors when
   trying to load Metamod:Source on a game using an older set of engine
   libraries.  This fix should now allow Metamod:Source to run with The Ship on
   Linux.

2006/08/16 1.3:
 - Added SourceHook support for functions that return references.
 - Added some extra information to the "meta game" command: Description and