@@ -60,9 +60,7 @@ public:
 	virtual void DisplayError(const char *fmt, ...);
 	virtual void DisplayWarning(const char *fmt, ...);
 	virtual int TryServerGameDLL(const char *iface);
-	virtual void Notify_DLLInit_Pre(void *gamedll,
-		CreateInterfaceFn engineFactory, 
-		CreateInterfaceFn serverFactory);
+	virtual void Notify_DLLInit_Pre(CreateInterfaceFn engineFactory, CreateInterfaceFn serverFactory);
 	void Notify_DLLShutdown_Pre();
 	virtual void ServerCommand(const char *cmd);
 	virtual ConVar *CreateConVar(const char *name, 
@@ -79,6 +77,7 @@ public:
 	virtual int FindUserMessage(const char *name, int *size=NULL);
 	virtual const char *GetUserMessage(int index, int *size=NULL);
 	virtual int DetermineSourceEngine(const char *game);
+	virtual bool IsAlternatelyLoaded();
 };
 
 extern IVEngineServer *engine;
