@@ -25,16 +25,46 @@
  * Version: $Id$
  */
 
+#if defined _DEBUG
+#define DEBUG2
+#undef _DEBUG
+#endif
+#include "../metamod_oslink.h"
+#include <sourcehook.h>
+#include <convar.h>
+#include <eiface.h>
+#include "iplayerinfo.h"
+#if defined DEBUG2
+#undef DEBUG2
+#define _DEBUG
+#endif
 #include "vsp_listener.h"
 #include "svn_version.h"
 #include "metamod.h"
+#include "provider_ep2.h"
+
+SH_DECL_HOOK1_void(ConCommand, Dispatch, SH_NOATTRIB, false, const CCommand &);
 
 using namespace SourceMM;
+
+ConCommand *g_plugin_unload = NULL;
+bool g_bIsTryingToUnload;
+
+void InterceptPluginUnloads(const CCommand &args)
+{
+	g_bIsTryingToUnload = true;
+}
+
+void InterceptPluginUnloads_Post(const CCommand &args)
+{
+	g_bIsTryingToUnload = false;
+}
 
 VSPListener::VSPListener()
 {
 	m_bLoaded = false;
 	m_bLoadable = false;
+	m_bIsRootLoadMethod = false;
 }
 
 void VSPListener::ClientActive(edict_t *pEntity)
@@ -108,6 +138,24 @@ void VSPListener::ServerActivate(edict_t *pEdictList, int edictCount, int client
 
 void VSPListener::Unload()
 {
+	if (g_bIsTryingToUnload)
+	{
+		Error("Metamod:Source cannot be unloaded from VSP mode.  Use \"meta unload\" to unload specific plugins.\n");
+		return;
+	}
+	if (IsRootLoadMethod())
+	{
+		if (g_plugin_unload != NULL)
+		{
+			SH_REMOVE_HOOK_STATICFUNC(ConCommand, Dispatch, g_plugin_unload, InterceptPluginUnloads, false);
+			SH_REMOVE_HOOK_STATICFUNC(ConCommand, Dispatch, g_plugin_unload, InterceptPluginUnloads_Post, true);
+			g_plugin_unload = NULL;
+		}
+		UnloadMetamod();
+	}
+	m_bLoaded = false;
+	m_bLoadable = true;
+	m_bIsRootLoadMethod = false;
 }
 
 void VSPListener::SetLoadable(bool set)
@@ -117,15 +165,76 @@ void VSPListener::SetLoadable(bool set)
 
 bool VSPListener::Load(CreateInterfaceFn interfaceFactory, CreateInterfaceFn gameServerFactory)
 {
-	if (!m_bLoadable)
+	if (!g_Metamod.IsLoadedAsGameDLL())
 	{
-		provider->DisplayWarning("Do not manually load Metamod:Source as a Valve Server Plugin\n");
-		return false;
-	}
+		CGlobalVars *pGlobals;
+		IPlayerInfoManager *playerInfoManager;
 
-	if (m_bLoaded)
-	{
-		return false;
+		playerInfoManager = (IPlayerInfoManager *)gameServerFactory("PlayerInfoManager002", NULL);
+		if (playerInfoManager == NULL)
+		{
+			Msg("Metamod:Source requires gameinfo.txt modification to load on this game.\n");
+			return false;
+		}
+
+		pGlobals = playerInfoManager->GetGlobalVars();
+
+		char gamedll_iface[] = "ServerGameDLL000";
+		for (unsigned int i = 5; i <= 50; i++)
+		{
+			gamedll_iface[15] = '0' + i;
+			if ((server = (IServerGameDLL *)gameServerFactory(gamedll_iface, NULL)) != NULL)
+			{
+				g_Metamod.SetGameDLLInfo(gameServerFactory, i);
+				break;
+			}
+		}
+
+		if (server == NULL)
+		{
+			Msg("Metamod:Source could not load (GameDLL version not compatible).\n");
+			return false;
+		}
+
+		char gameclients_iface[] = "ServerGameClients000";
+		for (unsigned int i = 3; i <= 4; i++)
+		{
+			gameclients_iface[19] = '0' + i;
+			if ((gameclients = (IServerGameClients *)gameServerFactory(gameclients_iface, NULL)) == NULL)
+			{
+				break;
+			}
+		}
+
+		if (!DetectGameInformation())
+		{
+			Msg("Metamod:Source failed to detect game paths; cannot load.\n");
+			return false;
+		}
+
+		m_bIsRootLoadMethod = true;
+		m_bLoaded = true;
+		SetLoadable(false);
+
+		InitializeForLoad();
+		InitializeGlobals(interfaceFactory, interfaceFactory, interfaceFactory, pGlobals);
+		
+		const ConCommandBase *pBase = icvar->GetCommands();
+		while (pBase != NULL)
+		{
+			if (pBase->IsCommand() && strcmp(pBase->GetName(), "plugin_unload") == 0)
+			{
+				g_plugin_unload = (ConCommand *)pBase;
+				break;
+			}
+			pBase = pBase->GetNext();
+		}
+
+		if (g_plugin_unload != NULL)
+		{
+			SH_ADD_HOOK_STATICFUNC(ConCommand, Dispatch, g_plugin_unload, InterceptPluginUnloads, false);
+			SH_ADD_HOOK_STATICFUNC(ConCommand, Dispatch, g_plugin_unload, InterceptPluginUnloads_Post, true);
+		}
 	}
 
 	m_bLoaded = true;
@@ -138,4 +247,9 @@ bool VSPListener::Load(CreateInterfaceFn interfaceFactory, CreateInterfaceFn gam
 
 void VSPListener::OnQueryCvarValueFinished(QueryCvarCookie_t iCookie, edict_t *pPlayerEntity, EQueryCvarValueStatus eStatus, const char *pCvarName, const char *pCvarValue )
 {
+}
+
+bool VSPListener::IsRootLoadMethod()
+{
+	return m_bIsRootLoadMethod;
 }
